--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,1 +1,36 @@
-@import 'partials/reset';
+@import '_partials/reset';
+@import '_partials/colors';
+@import '_partials/fonts';
+
+.container {
+  max-width: 45em;
+  margin: auto;
+  padding: 5rem 0;
+
+}
+
+#section01{
+  background: $brightRed;
+  img {
+    display: block;
+    margin: 0 auto;
+    padding: 0 0 4rem 0;
+  }
+  h1 {
+    text-align: center;
+    font-family: 'DropDead';
+    color: $brightGreen;
+    font-size: 6.25rem;
+  }
+  h2{
+    padding: 2rem 0 0 0;
+    text-align: center;
+    font-family: 'DropDead';
+    color: $blackText;
+    font-size: 1.5rem;
+  }
+}
+
+#intro-questions{
+  background: $darkGrey;
+}
