--- a/styles/app.css
+++ b/styles/app.css
@@ -104,10 +104,16 @@ label > span {
 #intro-questions {
   background: #303030; }
 
-.submit-section {
-  background: #303030;
-  text-align: right; }
-  .submit-section button {
-    font-family: 'DropDead';
-    display: inline-block;
-    border-radius: none; }
+.submit-section button {
+  width: 100%;
+  height: 400px;
+  font-size: 20rem;
+  text-align: center;
+  overflow: hidden;
+  font-family: 'DropDead';
+  border-radius: none;
+  transform: all 2s ease; }
+  .submit-section button:hover {
+    color: #9EFF36;
+    font-size: 1rem;
+    background: #FF0000; }
