--- a/scss/app.scss
+++ b/scss/app.scss
@@ -66,11 +66,19 @@ label > span {
   background: $darkGrey;
 }
 .submit-section {
-  background: $darkGrey;
-  text-align:right;
   button {
+    width: 100%;
+    height: 400px;
+    font-size: 20rem;
+    text-align: center;
+    overflow: hidden;
     font-family: 'DropDead';
-    display: inline-block;
     border-radius: none;
+    transform: all 2s ease;
+    &:hover {
+      color: $brightGreen;
+      font-size: 1rem;
+      background: $brightRed;
+    }
   }
 }
